--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "flowbite-react-icons": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "supabase": "^1.223.10"
+    "supabase": "^1.223.10",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.0",
