--- a/.github/workflows/vite-gh-pages.yml
+++ b/.github/workflows/vite-gh-pages.yml
@@ -3,7 +3,7 @@ name: Deploy Vite with GitHub Pages dependencies preinstalled
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["login-test"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
