--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"node src/backend/auth/server.js\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -12,8 +12,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-router": "^1.56.2",
     "@types/express": "^5.0.0",
@@ -25,11 +23,11 @@
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zxcvbn": "^4.4.2"
     "react-router-dom": "^7.4.0",
     "save-dev": "^0.0.1-security",
     "spin-wheel-game": "^1.0.3-alpha.3",
-    "supabase": "^1.226.4"
+    "supabase": "^1.226.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.0",
@@ -44,6 +42,7 @@
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
