--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.4.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "save-dev": "^0.0.1-security",
